examples/test/testpolicy15076.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15076
  namespace: namespace361
spec:
  podSelector:
    matchLabels:
      key49: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value36
          key41: value13
      podSelector:
        matchLabels:
          key37: value3
          key32: value14
